Muevo archivos a nueva carpeta

--- a/TFIDF/TFIDF.ipynb
+++ b/TFIDF/TFIDF.ipynb
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "with io.open('AMLO_28042013.txt', mode='r', encoding='utf-8') as f:\n",
+    "with io.open('Data/AMLO_28042013.txt', mode='r', encoding='utf-8') as f:\n",
     "    boletin = f.read().splitlines()\n",
     "boletin"
    ]
@@ -4463,7 +4463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4770,7 +4770,7 @@
        "Párrafo 24     michoacán         valle  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
