Agrego fecha al script de boletines

--- a/webscrap-amlo.ipynb
+++ b/webscrap-amlo.ipynb
@@ -15,8 +15,8 @@
    "source": [
     "from selenium import webdriver\n",
     "from bs4 import BeautifulSoup\n",
-    "# from tqdm.notebook import tqdm\n",
-    "from tqdm import tqdm\n",
+    "from tqdm.notebook import tqdm\n",
+    "# from tqdm import tqdm\n",
     "from uuid import uuid4\n",
     "import pandas as pd\n",
     "import datetime as dt"
@@ -31,24 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FECHA_INICIO = dt.date(2018, 3, 30)\n",
+    "def obtener_ruta(fecha):\n",
+    "    return SITIO_BASE + fecha.strftime(\"%Y/%m/%d\")\n",
+    "\n",
+    "# FECHA_INICIO = dt.date(2018, 3, 30) # Inicio oficial\n",
     "FECHA_INICIO = dt.date(2018, 4, 1)\n",
     "FECHA_FIN = dt.date(2018, 6, 27)\n",
     "UN_DIA = dt.timedelta(days=1)\n",
     "DIAS_DIF = (FECHA_FIN - FECHA_INICIO).days + 1\n",
     "SITIO_BASE = 'https://lopezobrador.org.mx/'\n",
     "RUTA_CHROMEDRIVER = \"C:\\\\Chromedriver\\\\chromedriver.exe\"\n",
-    "articulos = []\n",
-    "\n",
-    "def obtener_ruta(fecha):\n",
-    "    return SITIO_BASE + fecha.strftime(\"%Y/%m/%d\")\n",
-    "\n",
-    "# print('Inicio de campaña: ', FECHA_INICIO)\n",
-    "# print('Fin de campaña: ', FECHA_FIN)"
+    "RUTAS = [obtener_ruta(FECHA_INICIO + UN_DIA*i) for i in range(DIAS_DIF)]\n",
+    "articulos = []"
    ]
   },
   {
@@ -77,22 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Progreso por fecha: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 88/88 [02:28<00:00,  1.43s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rutas = [obtener_ruta(FECHA_INICIO + UN_DIA*i) for i in range(DIAS_DIF)]\n",
-    "for ruta in tqdm(rutas, desc='Progreso por fecha'):\n",
+    "for ruta in tqdm(RUTAS, desc='Progreso por fecha'):\n",
     "#     ruta_actual = obtener_ruta(fecha_actual)\n",
     "    driver.get(ruta)\n",
     "    content = driver.page_source\n",
@@ -103,6 +92,7 @@
     "        articulo = {\n",
     "            'uuid': str(uuid4()),\n",
     "            'fuente' : '',\n",
+    "            'fecha' : ruta[-10:], # En esta parte de la ruta se encuentra la fecha\n",
     "            'encabezado' : '',\n",
     "            'sumarios' : [],\n",
     "            'contenido' : [],\n",
@@ -137,11 +127,18 @@
     "        # Agregamos el nuevo artículo\n",
     "        articulos.append(articulo)\n",
     "#     fecha_actual += UN_DIA\n",
-    "\n",
-    "# Hacemos un objeto    \n",
+    "#     break\n",
+    "# Hacemos un objeto para boletines\n",
     "boletines = {\n",
     "    'boletines' : articulos\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Guardar resultados"
    ]
   },
   {
@@ -162,20 +159,13 @@
     "with open('Data/boletines-AMLO.json', 'w', encoding='utf-8') as file:\n",
     "    df_boletines.to_json(file, force_ascii=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.8 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36864bit27614f1e16684611a4b8e8ac168ac791"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
