Modifico el tipo de contenido en los boletines

--- a/webscrap-amlo.ipynb
+++ b/webscrap-amlo.ipynb
@@ -67,7 +67,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "## Scrapping\n",
     "Lógica principal para obtener información"
@@ -75,11 +79,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "362e77d996e24a128abd25d7cad390b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Progreso por fecha', max=88.0, style=ProgressStyle(descri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for ruta in tqdm(RUTAS, desc='Progreso por fecha'):\n",
     "#     ruta_actual = obtener_ruta(fecha_actual)\n",
@@ -95,7 +121,7 @@
     "            'fecha' : ruta[-10:], # En esta parte de la ruta se encuentra la fecha\n",
     "            'encabezado' : '',\n",
     "            'sumarios' : [],\n",
-    "            'contenido' : [],\n",
+    "            'contenido' : \"\",\n",
     "        }\n",
     "        \n",
     "        # Encabezado del boletin\n",
@@ -117,12 +143,12 @@
     "        # Contenido del boletin\n",
     "        soup_content = soup_articulo.find('div', attrs={'class':'entry-content'})\n",
     "        for soup_p in soup_content.findAll('p'):\n",
-    "            contenido = soup_p.string if soup_p.string else \"\"\n",
-    "            if( len(contenido) < 3 ):\n",
-    "                contenido = \" \".join([child.string for child in soup_p.children if child.string])\n",
-    "            contenido = contenido.strip()\n",
-    "            if( len(contenido) >= 3 and contenido != 'ªªªªªªªªªªª' ):\n",
-    "                articulo['contenido'].append(contenido)\n",
+    "            parrafo = soup_p.string if soup_p.string else \"\"\n",
+    "            if( len(parrafo) < 3 ):\n",
+    "                parrafo = \" \".join([child.string for child in soup_p.children if child.string])\n",
+    "            parrafo = parrafo.strip()\n",
+    "            if( len(parrafo) >= 3 ): #and parrafo != 'ªªªªªªªªªªª' ):\n",
+    "                articulo['contenido'] += parrafo+\"\\n\"\n",
     "        \n",
     "        # Agregamos el nuevo artículo\n",
     "        articulos.append(articulo)\n",
@@ -132,6 +158,54 @@
     "boletines = {\n",
     "    'boletines' : articulos\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boletin faltante\n",
+    "boletines['boletines'][60]['contenido'] = \"\"\"Boletín campaña-062\n",
+    "Descargar: Boletín campaña 062\n",
+    "Descargar: Entrevista AMLO, Coparmex  \n",
+    "Ciudad de México, 17 de mayo de 2018.-   El candidato por la coalición “Juntos haremos historia” por la Presidencia de México, Andrés Manuel López Obrador expresó que respeta la postura de Margarita Zavala, “muchos de los que iban a votar por ella, estoy seguro que lo van a hacer ahora por nosotros”.\n",
+    "En entrevista y a la pregunta de los reporteros sobre si es un acto de valentía o de congruencia Margarita Zavala a estas alturas, el candidato presidencial respondió que no lo califica, eso se los dejó a la interpretación de los representantes de los medios de comunicación.\n",
+    "Sobre si la ex candidata independiente pactó con Anaya, ayer prácticamente en todo el programa de Tercer Grado habló en contra de usted, López Obrador comentó que Zavala trae un cargo de conciencia.\n",
+    "Agregó: “porque su esposo Felipe Calderón se robó la Presidencia en el 2006, fue el que desató esta guerra que ha causado la muerte de miles de mexicanos, entonces Calderón convirtió al país en un cementerio, entonces, eso les pesa mucho, trae ese problema de conciencia, pero no es conmigo”.\n",
+    "Indicó que Margarita Zavala y Felipe Calderón deberían de entender que tienen esa deuda histórica con el pueblo de México.\n",
+    "A la pregunta de los reporteros sobre si cree que Zavala se vaya a sumar algún otro candidato, el candidato presidencial respondió que puede ser, porque se identifica con el PRIAN. “No sucede nada, ya la gente decidió a favor de un cambio verdadero, vamos a ganar aunque se unan todos, les vamos a ganar”.\n",
+    "Sobre si espera más retiros, más declinaciones de los candidatos, López Obrador manifestó que puede ser, porque están muy nerviosos, están muy preocupados, “estamos muy arriba, ya pasamos en términos de resultados finales de efectividad, ya pasamos el 50 por ciento de intención del voto”.\n",
+    "Expuso que está mucho muy arriba, desde luego es el ciudadano que decidirá, pero nunca se había visto en la historia del país que un candidato sacará tanta ventaja como ahora. “No es para presumir pobremente estamos como 30 puntos arriba”.\n",
+    "Comentó que fue una buena reunión con los integrantes de la Confederación Patronal de la República Mexicana (COPARMEX), fueron muy cordiales a pesar de que tiene diferencias, porque así es la democracia, se diálogo en un ambiente de respeto y de cordialidad.\n",
+    "ªªªªªªªªªªª\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'uuid': '8cb46087-5cd3-4a0c-9667-c30c2553fe40',\n",
+       " 'fuente': 'https://lopezobrador.org.mx/2018/05/17/expresa-amlo-que-respeta-la-postura-de-margarita-zavala/',\n",
+       " 'fecha': '2018/05/17',\n",
+       " 'encabezado': 'Expresa AMLO que respeta la postura de Margarita Zavala',\n",
+       " 'sumarios': ['Prevé que haya más declinaciones, están muy nerviosos “ya pasamos el 50 por ciento de intención del voto”',\n",
+       "  'Comentó que fue una buena reunión con los integrantes de la Confederación Patronal de la República Mexicana (COPARMEX)'],\n",
+       " 'contenido': 'Boletín campaña-062\\nDescargar: Boletín campaña 062\\nDescargar: Entrevista AMLO, Coparmex  \\nCiudad de México, 17 de mayo de 2018.-   El candidato por la coalición “Juntos haremos historia” por la Presidencia de México, Andrés Manuel López Obrador expresó que respeta la postura de Margarita Zavala, “muchos de los que iban a votar por ella, estoy seguro que lo van a hacer ahora por nosotros”.\\nEn entrevista y a la pregunta de los reporteros sobre si es un acto de valentía o de congruencia Margarita Zavala a estas alturas, el candidato presidencial respondió que no lo califica, eso se los dejó a la interpretación de los representantes de los medios de comunicación.\\nSobre si la ex candidata independiente pactó con Anaya, ayer prácticamente en todo el programa de Tercer Grado habló en contra de usted, López Obrador comentó que Zavala trae un cargo de conciencia.\\nAgregó: “porque su esposo Felipe Calderón se robó la Presidencia en el 2006, fue el que desató esta guerra que ha causado la muerte de miles de mexicanos, entonces Calderón convirtió al país en un cementerio, entonces, eso les pesa mucho, trae ese problema de conciencia, pero no es conmigo”.\\nIndicó que Margarita Zavala y Felipe Calderón deberían de entender que tienen esa deuda histórica con el pueblo de México.\\nA la pregunta de los reporteros sobre si cree que Zavala se vaya a sumar algún otro candidato, el candidato presidencial respondió que puede ser, porque se identifica con el PRIAN. “No sucede nada, ya la gente decidió a favor de un cambio verdadero, vamos a ganar aunque se unan todos, les vamos a ganar”.\\nSobre si espera más retiros, más declinaciones de los candidatos, López Obrador manifestó que puede ser, porque están muy nerviosos, están muy preocupados, “estamos muy arriba, ya pasamos en términos de resultados finales de efectividad, ya pasamos el 50 por ciento de intención del voto”.\\nExpuso que está mucho muy arriba, desde luego es el ciudadano que decidirá, pero nunca se había visto en la historia del país que un candidato sacará tanta ventaja como ahora. “No es para presumir pobremente estamos como 30 puntos arriba”.\\nComentó que fue una buena reunión con los integrantes de la Confederación Patronal de la República Mexicana (COPARMEX), fueron muy cordiales a pesar de que tiene diferencias, porque así es la democracia, se diálogo en un ambiente de respeto y de cordialidad.\\nªªªªªªªªªªª'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boletines['boletines'][60]"
    ]
   },
   {
