Agrego instrucción de cierre de chromedriver de selenium

--- a/webscrap-amlo.ipynb
+++ b/webscrap-amlo.ipynb
@@ -167,6 +167,7 @@
    "outputs": [],
    "source": [
     "# Boletin faltante\n",
+    "\n",
     "boletines['boletines'][60]['contenido'] = \"\"\"Boletín campaña-062\n",
     "Descargar: Boletín campaña 062\n",
     "Descargar: Entrevista AMLO, Coparmex  \n",
@@ -183,32 +184,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'uuid': '8cb46087-5cd3-4a0c-9667-c30c2553fe40',\n",
-       " 'fuente': 'https://lopezobrador.org.mx/2018/05/17/expresa-amlo-que-respeta-la-postura-de-margarita-zavala/',\n",
-       " 'fecha': '2018/05/17',\n",
-       " 'encabezado': 'Expresa AMLO que respeta la postura de Margarita Zavala',\n",
-       " 'sumarios': ['Prevé que haya más declinaciones, están muy nerviosos “ya pasamos el 50 por ciento de intención del voto”',\n",
-       "  'Comentó que fue una buena reunión con los integrantes de la Confederación Patronal de la República Mexicana (COPARMEX)'],\n",
-       " 'contenido': 'Boletín campaña-062\\nDescargar: Boletín campaña 062\\nDescargar: Entrevista AMLO, Coparmex  \\nCiudad de México, 17 de mayo de 2018.-   El candidato por la coalición “Juntos haremos historia” por la Presidencia de México, Andrés Manuel López Obrador expresó que respeta la postura de Margarita Zavala, “muchos de los que iban a votar por ella, estoy seguro que lo van a hacer ahora por nosotros”.\\nEn entrevista y a la pregunta de los reporteros sobre si es un acto de valentía o de congruencia Margarita Zavala a estas alturas, el candidato presidencial respondió que no lo califica, eso se los dejó a la interpretación de los representantes de los medios de comunicación.\\nSobre si la ex candidata independiente pactó con Anaya, ayer prácticamente en todo el programa de Tercer Grado habló en contra de usted, López Obrador comentó que Zavala trae un cargo de conciencia.\\nAgregó: “porque su esposo Felipe Calderón se robó la Presidencia en el 2006, fue el que desató esta guerra que ha causado la muerte de miles de mexicanos, entonces Calderón convirtió al país en un cementerio, entonces, eso les pesa mucho, trae ese problema de conciencia, pero no es conmigo”.\\nIndicó que Margarita Zavala y Felipe Calderón deberían de entender que tienen esa deuda histórica con el pueblo de México.\\nA la pregunta de los reporteros sobre si cree que Zavala se vaya a sumar algún otro candidato, el candidato presidencial respondió que puede ser, porque se identifica con el PRIAN. “No sucede nada, ya la gente decidió a favor de un cambio verdadero, vamos a ganar aunque se unan todos, les vamos a ganar”.\\nSobre si espera más retiros, más declinaciones de los candidatos, López Obrador manifestó que puede ser, porque están muy nerviosos, están muy preocupados, “estamos muy arriba, ya pasamos en términos de resultados finales de efectividad, ya pasamos el 50 por ciento de intención del voto”.\\nExpuso que está mucho muy arriba, desde luego es el ciudadano que decidirá, pero nunca se había visto en la historia del país que un candidato sacará tanta ventaja como ahora. “No es para presumir pobremente estamos como 30 puntos arriba”.\\nComentó que fue una buena reunión con los integrantes de la Confederación Patronal de la República Mexicana (COPARMEX), fueron muy cordiales a pesar de que tiene diferencias, porque así es la democracia, se diálogo en un ambiente de respeto y de cordialidad.\\nªªªªªªªªªªª'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "boletines['boletines'][60]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('Data/boletines-AMLO.json', 'w', encoding='utf-8') as file:\n",
     "    df_boletines.to_json(file, force_ascii=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
