Quito stop-words

--- a/AMLO-tfidf-test.ipynb
+++ b/AMLO-tfidf-test.ipynb
@@ -2,47 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "# import nltk.data\n",
+    "from collections import Counter\n",
     "from itertools import chain\n",
     "from functools import reduce\n",
     "import re\n",
-    "from math import log\n",
-    "from collections import Counter"
+    "import io\n",
+    "from math import log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tokenizer = nltk.data.load('tokenizers/punkt/spanish.pickle')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_json('Data/boletines-AMLO.json', dtype=\"dict\", encoding=\"utf-8\")\n",
     "boletines = data['boletines']\n",
-    "corpus = [boletin[\"contenido\"] for boletin in boletines]\n",
-    "counter_boletines = [Counter(contenido) for contenido in corpus_tokenizado]"
+    "corpus = [boletin[\"contenido\"] for boletin in boletines]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus_tokenizado = [re.findall('[a-zA-zñáéíóúüÁÉÍÓÚÜÑ]+', contenido.lower()) for contenido in corpus if len(contenido)>2]\n",
+    "counter_boletines = [Counter(contenido) for contenido in corpus_tokenizado]\n",
     "ch = chain(*corpus_tokenizado)\n",
     "todos_los_tokens = list(ch)\n",
     "df_corpus = pd.DataFrame(todos_los_tokens)\n",
@@ -51,18 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with io.open('stop-words-spanish.txt', mode='r', encoding='utf-8') as f:\n",
+    "with io.open('TFIDF/stop-words-spanish.txt', mode='r', encoding='utf-8') as f:\n",
     "    stopwords = f.read().splitlines()\n",
     "corpus_tokenizado = [[w for w in doc if not (w in stopwords)] for doc in corpus_tokenizado]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +153,7 @@
        "  'sostienen',\n",
        "  'hundimiento',\n",
        "  'n',\n",
-       "  'tendrían'],\n",
+       "  'océano'],\n",
        " ['moral',\n",
        "  'populismo',\n",
        "  'redes',\n",
@@ -180,7 +171,7 @@
        "  'roberto']]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
