Agrego palabras más comunes en el corpus

--- a/AMLO-tfidf-test.ipynb
+++ b/AMLO-tfidf-test.ipynb
@@ -33,11 +33,10 @@
    "outputs": [],
    "source": [
     "corpus_tokenizado = [re.findall('[a-zA-zñáéíóúüÁÉÍÓÚÜÑ]+', contenido.lower()) for contenido in corpus if len(contenido)>2]\n",
-    "counter_boletines = [Counter(contenido) for contenido in corpus_tokenizado]\n",
-    "ch = chain(*corpus_tokenizado)\n",
-    "todos_los_tokens = list(ch)\n",
-    "df_corpus = pd.DataFrame(todos_los_tokens)\n",
-    "df_corpus.to_csv('Data/pln_corpus_amlo.csv')"
+    "# ch = chain(*corpus_tokenizado)\n",
+    "# todos_los_tokens = list(ch)\n",
+    "# df_corpus = pd.DataFrame(todos_los_tokens)\n",
+    "# df_corpus.to_csv('Data/pln_corpus_amlo.csv')"
    ]
   },
   {
@@ -48,7 +47,8 @@
    "source": [
     "with io.open('TFIDF/stop-words-spanish.txt', mode='r', encoding='utf-8') as f:\n",
     "    stopwords = f.read().splitlines()\n",
-    "corpus_tokenizado = [[w for w in doc if not (w in stopwords)] for doc in corpus_tokenizado]"
+    "corpus_tokenizado = [[w for w in doc if not (w in stopwords)] for doc in corpus_tokenizado]\n",
+    "counter_boletines = [Counter(contenido) for contenido in corpus_tokenizado]"
    ]
   },
   {
@@ -179,6 +179,64 @@
    "source": [
     "keywords = obtener_keywords(tfidfs, 15)\n",
     "keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter_total = reduce(lambda x, y : x+y, counter_boletines, Counter())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('méxico', 1001),\n",
+       " ('lópez', 654),\n",
+       " ('obrador', 650),\n",
+       " ('va', 466),\n",
+       " ('gobierno', 447),\n",
+       " ('país', 409),\n",
+       " ('pueblo', 403),\n",
+       " ('candidato', 395),\n",
+       " ('dijo', 392),\n",
+       " ('si', 373),\n",
+       " ('vamos', 370),\n",
+       " ('manuel', 306),\n",
+       " ('andrés', 296),\n",
+       " ('presidencia', 274),\n",
+       " ('historia', 272),\n",
+       " ('juntos', 257),\n",
+       " ('corrupción', 255),\n",
+       " ('comentó', 253),\n",
+       " ('campaña', 249),\n",
+       " ('mil', 238),\n",
+       " ('haremos', 233),\n",
+       " ('coalición', 232),\n",
+       " ('van', 223),\n",
+       " ('pregunta', 223),\n",
+       " ('presidente', 219),\n",
+       " ('expresó', 218),\n",
+       " ('poder', 217),\n",
+       " ('indicó', 209),\n",
+       " ('ahora', 204),\n",
+       " ('pesos', 203)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter_total.most_common(30)"
    ]
   },
   {
