Reorganizo pruebas de webscrapping con boletines de AMLO

--- a/Web Scrapping/webscrap-amlo.ipynb
+++ b/Web Scrapping/webscrap-amlo.ipynb
@@ -30,11 +30,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El driver de Google Chrome se puede descargar de [aquí](https://sites.google.com/a/chromium.org/chromedriver/downloads)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Los boletines se encuentran en páginas con formato https://lopezobrador.org.mx/{yyyy}/{mm/{dd}\n",
     "def obtener_ruta(fecha):\n",
     "    return SITIO_BASE + fecha.strftime(\"%Y/%m/%d\")\n",
     "\n",
@@ -205,8 +213,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('Data/boletines-AMLO.json', 'w', encoding='utf-8') as file:\n",
+    "with open('./../Boletines/AMLO/json/boletines.json', 'w', encoding='utf-8') as file:\n",
     "    df_boletines.to_json(file, force_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cierro el driver de Selenium"
    ]
   },
   {
@@ -217,13 +232,6 @@
    "source": [
     "driver.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -242,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
