Muevo archivos de lugar y renombro carpetas

--- a/TFIDF/AMLO-TFIDF-por-boletin.ipynb
+++ b/TFIDF/AMLO-TFIDF-por-boletin.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pruebas con TFIDF de boletines de AMLO\n",
+    "\n",
+    "Uso el archivo json que generé con [este script](./../WebScrapping/webscrapping-amlo.ipynb).\n",
+    "\n",
+    "Calculo TFIDF usando un boletín como documento y todos los boletines de AMLO como corpus."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_json('Data/boletines-AMLO.json', dtype=\"dict\", encoding=\"utf-8\")\n",
+    "data = pd.read_json('./../Boletines/AMLO/json/boletines.json', dtype=\"dict\", encoding=\"utf-8\")\n",
     "boletines = data['boletines']\n",
     "corpus = [boletin[\"contenido\"] for boletin in boletines]"
    ]
@@ -113,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfs = [tf(corpus_tokenizado[1]), tf(corpus_tokenizado[23])]"
+    "tfs = [tf(corpus_tokenizado[i]) for i in [1, 23, 87]]"
    ]
   },
   {
